attempt to fix comment wrapping

--- a/src/com/content-comments/comments.less
+++ b/src/com/content-comments/comments.less
@@ -77,9 +77,6 @@
 			margin-right: 1em;
 			
 			overflow-wrap: break-word;
-			word-wrap: break-word;
-			word-break: break-all;
-			word-break: break-word;
 			hyphens: auto;
 			
 			& .-author {
